--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,7 @@
       "name": "Python: Current File (Integrated Terminal)",
       "type": "python",
       "request": "launch",
-      "program": "${workspaceFolder}/crawler/crawler/runner.py",
+      "program": "${workspaceFolder}/crawler/crawler/pagerank.py",
       "console": "integratedTerminal",
       "cwd": "${workspaceFolder}/crawler"
     },
